Remoção dos End-Points Upload e DataMock
