# be/src/swagger.json
@@ -222,76 +222,6 @@
         "tags": ["auth"]
       }
     },
-
-    "/data-mock": {
-      "get": {
-        "summary": "Retorna dados mockados para teste de criação do HeatMap",
-        "responses": {
-          "200": {
-            "description": "Dados retornados com sucesso",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/File"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "tags": ["test"]
-      }
-    },
-    "/upload": {
-      "post": {
-        "summary": "Faz upload de um arquivo CSV sem tratamento",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "multipart/form-data": {
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "file": {
-                    "type": "string",
-                    "format": "binary"
-                  },
-                  "filename": {
-                    "type": "string"
-                  },
-                  "description": {
-                    "type": "string"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Arquivo CSV processado e dados salvos com sucesso",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string"
-                    },
-                    "data": {
-                      "$ref": "#/components/schemas/File"
-                    }
-                  }
-                }
-              }
-            }
-          }
-        },
-        "tags": ["upload"]
-      }
-    },
     "/heatmap": {
       "post": {
         "summary": "Faz upload de um arquivo CSV e um arquivo de mídia para gerar o heatmap JSON",
